<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/magenta"
    tools:context=".Cursos">

    <Button
        android:id="@+id/btnCursosVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/ciano"
        android:onClick="clickVoltar"
        android:text="@string/strVoltar"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/strCursoTitulo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCursosVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/strCursos">

            <ImageView
                android:id="@+id/imgCurPortugol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurPortugol"
                app:srcCompat="@drawable/cursoportugol" />

            <ImageView
                android:id="@+id/imgCurLingC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurLingC"
                app:srcCompat="@drawable/cursolingc"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/imgCurAndroid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurAndroid"
                app:srcCompat="@drawable/cursoandroid" />

            <ImageView
                android:id="@+id/imgCurPHP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurPHP"
                app:srcCompat="@drawable/cursokotlin" />

            <ImageView
                android:id="@+id/imgCurCSharp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurCSharp"
                app:srcCompat="@drawable/cursolingcsharp" />

            <ImageView
                android:id="@+id/imgCurKotlin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurKotlin"
                app:srcCompat="@drawable/cursophp" />

            <ImageView
                android:id="@+id/imgCurVideo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/strCursos"
                android:onClick="clickCurVideo"
                app:srcCompat="@drawable/cursovideo" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>